--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ a{
 }
 /*metodologia*/
 .metodo{
-	background-image: url(../img/metodo.jpg);
+	background-image: url(../img/metodo.JPG);
 	width: 100%;
 	height: 300px;
 	background-size: 100% 100%;
